--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -44,10 +44,10 @@
         android:hint="Actor"
         android:layout_marginTop="10dp">
         <AutoCompleteTextView
-            android:id="@+id/dropDown_LevelUser"
+            android:id="@+id/levelUser_DropDown"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="none"/>
+            android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -70,7 +70,7 @@
         android:hint="Gender"
         android:layout_marginTop="10dp">
         <AutoCompleteTextView
-            android:id="@+id/dropDown_Gender"
+            android:id="@+id/gender_DropDown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"/>
