--- a/app/src/main/res/layout/item_list_dropdown.xml
+++ b/app/src/main/res/layout/item_list_dropdown.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
     android:ellipsize="end"
     android:maxLines="1"
-    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-    />
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
