--- a/app/src/main/res/layout/item_recycler_traceability.xml
+++ b/app/src/main/res/layout/item_recycler_traceability.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/itemTraceRecyclerViewCV"
+    android:id="@+id/itemTraceRecyclerView"
     android:layout_marginStart="12dp"
     android:layout_marginEnd="12dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="10dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp">
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -70,7 +72,7 @@
             android:layout_marginBottom="12dp"/>
 
     </RelativeLayout>
-        
+
 
 
 </androidx.cardview.widget.CardView>
