Update Qr Code successfully added to NewTraceabilityActivity.kt AddTraceabilityActivity.kt, and to firebase realtime (user and server). Show update Qr Code successfully added to DetailActivity.kt

--- a/app/src/main/res/layout/activity_add_traceability.xml
+++ b/app/src/main/res/layout/activity_add_traceability.xml
@@ -132,7 +132,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableStart="@drawable/ic_label"
-                    android:drawablePadding="12dp"/>
+                    android:drawablePadding="12dp"
+                    android:inputType="none"
+                    android:cursorVisible="false"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
