--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.core.widget.NestedScrollView android:id="@+id/nestedScrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -56,6 +62,16 @@
             android:paddingBottom="30dp"
             android:paddingHorizontal="10dp"
             tools:ignore="MissingConstraints">
+
+            <TextView
+                android:id="@+id/errorPictShallotET"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Please select an image"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="16sp"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/shallot_ImageIV"
@@ -331,3 +347,4 @@
 
     </ScrollView>
 </LinearLayout>
+</androidx.core.widget.NestedScrollView>
