Download link Url from firebase to image and convert to pdf, and then save to external storage .pdf

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -470,6 +470,7 @@
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_round_1"
+                    android:layout_marginBottom="10dp"
                     android:clickable="true"
                     android:text="Add Data"
                     android:textAllCaps="false"
@@ -484,6 +485,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:background="@drawable/btn_round_1"
+                    android:layout_marginBottom="10dp"
                     android:text="Download QR Code"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
